// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billing reducers fetch credit card 1`] = `
Immutable.Map {
  "creditCard": Immutable.Map {
    "brand": "visa",
    "last4": "4242",
    "exp_month": 12,
    "exp_year": 35,
  },
}
`;

exports[`billing reducers fetch current usage 1`] = `
Immutable.Map {
  "currentUsage": Immutable.Map {
    "data": Immutable.Map {
      "cost": 12.35,
      "ticket": 12323,
    },
    "meta": Immutable.Map {
      "startDate": "2016-11-13T18:30:19+00:00",
      "endDate": "2016-12-13T18:30:19+00:00",
    },
  },
}
`;

exports[`billing reducers fetch invoices 1`] = `
Immutable.Map {
  "invoices": Immutable.List [
    Immutable.Map {
      "metadata": Immutable.Map {},
      "paid": true,
      "date": "2016-11-13T18:30:19+00:00",
      "amount_due": 1234,
    },
  ],
}
`;

exports[`billing reducers should update the billing contact information on successful contact fetch action 1`] = `
Immutable.Map {
  "contact": Immutable.Map {
    "email": "hello@acme.gorgias.io",
    "shipping": Immutable.Map {
      "name": "Gorgias",
      "phone": "4155555556",
      "address": Immutable.Map {
        "line1": "52 Washburn St",
        "line2": "",
        "city": "San Francisco",
        "state": "CA",
        "country": "United States",
        "postal_code": "94103",
      },
    },
  },
}
`;

exports[`billing reducers should update the billing contact information on successful contact update action 1`] = `
Immutable.Map {
  "contact": Immutable.Map {
    "email": "hello@acme.gorgias.io",
    "shipping": Immutable.Map {
      "name": "Gorgias",
      "phone": "4155555556",
      "address": Immutable.Map {
        "line1": "52 Washburn St",
        "line2": "",
        "city": "San Francisco",
        "state": "CA",
        "country": "United States",
        "postal_code": "94103",
      },
    },
  },
}
`;

exports[`billing reducers update credit card 1`] = `
Immutable.Map {
  "creditCard": Immutable.Map {
    "brand": "visa",
    "last4": "4242",
    "exp_month": 12,
    "exp_year": 35,
  },
}
`;

exports[`billing reducers update subscription 1`] = `
Immutable.Map {
  "currentUsage": Immutable.Map {
    "data": Immutable.Map {
      "plan": "plan",
    },
  },
}
`;
